<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo_intro"
    android:orientation="vertical"
    android:id="@+id/linearGeneral" 
    >

        <LinearLayout
            android:id="@+id/contPaletas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/fondo_intro"
            android:gravity="top" >

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:contentDescription="@string/flecha_atras"
                android:onClick="irColorFan"
                android:src="@drawable/flechaatras" />

            <TextView
                android:id="@+id/txtTitulo"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="0.33"
                android:gravity="center"
                android:text="@string/color_fan"
                android:textSize="22sp" />
        </LinearLayout>
    

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginLeft="10dp"
         android:layout_marginTop="30dp"
        android:textColor="@color/fuente_menu_principal"
        android:text="@string/mis_paletas"
        fontPath="fonts/Whitney_HTF_Medium.ttf"
        android:layout_marginBottom="10dp"/>
    
    <ListView
        android:id="@+id/list"
        android:layout_marginLeft="7dp"
        android:clickable="false"
        android:layout_width="fill_parent"
        android:divider="@null"
        android:layout_height="wrap_content" />

</LinearLayout>