<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/gris_dialog" >

    <TextView
        android:id="@+id/idDelete"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:textSize="22sp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="50dp" />

    <LinearLayout
        android:id="@+id/linearDel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/boton_verde"
        android:orientation="horizontal"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:clickable="true"
        android:gravity="center_horizontal"
        android:onClick="borrarPaleta" >

        <TextView
            android:id="@+id/yes"
            android:textColor="@color/blanco"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            fontPath="fonts/Whitney_HTF_Medium.ttf"
            android:textSize="@dimen/font_size_botonoes" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/boton_gris"
        android:orientation="horizontal" 
        android:padding="10dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:gravity="center_horizontal"
        android:layout_marginBottom="50dp"
        >

        <TextView
            android:id="@+id/cancel"
            android:textColor="@color/blanco"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            fontPath="fonts/Whitney_HTF_Medium.ttf"
            android:layout_gravity="center"
            android:textSize="@dimen/font_size_botonoes"
             />
    </LinearLayout>

</LinearLayout>