<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/gris_dialog"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearcuerpo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/email_margin_top"
        android:layout_marginLeft="@dimen/email_margin_side"
        android:layout_marginRight="@dimen/email_margin_side"
        android:gravity="center"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/lineargen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/edtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"

                android:background="@color/blanco"
                android:ems="30"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:padding="10dp" >
            </EditText>

            <EditText
                android:id="@+id/edtPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@color/blanco"
                android:ems="30"
                android:hint="@string/phone"
                android:inputType="phone"
                android:padding="10dp" >
            </EditText>
        </LinearLayout>

        <EditText
            android:id="@+id/edtMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@color/blanco"
            android:ems="30"
            android:text="design@elespartano.com.ar"
            android:focusable="false"
            android:inputType="textEmailAddress"
            android:padding="10dp" >
        </EditText>

        <EditText
            android:id="@+id/edtcomment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginLeft="@dimen/email_margin_side"
            android:layout_marginRight="@dimen/email_margin_side"
            android:background="@color/blanco"
            android:ems="30"
            android:gravity="top"
            android:hint="@string/comment"
            android:lines="10"
            android:padding="10dp"
            android:singleLine="false" >
        </EditText>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearSendMail"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:layout_marginTop="@dimen/email_margin_top"
        android:layout_marginBottom="25dp"
        android:layout_marginLeft="75dp"
        android:layout_marginRight="75dp"
        android:background="@color/boton_verde"
        android:clickable="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="5dp"
        >

        <TextView
            android:id="@+id/yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/send"
            fontPath="fonts/Whitney_HTF_Medium.ttf"
            android:textColor="@color/blanco"
            android:textSize="28sp" />
    </LinearLayout>

</LinearLayout>