<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo_negro_mp"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/contPaletas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@color/fondo_intro"
        android:gravity="top" 
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/color_fan"
            android:textSize="22sp" />
        
    </LinearLayout>
          <LinearLayout
        android:id="@+id/cabecera2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@color/fondo_intro"
        android:layout_marginTop="7dp"
        android:layout_marginRight="5dp"
        android:orientation="horizontal">
    
        <ImageView
            android:id="@+id/irPaletasId"
            android:layout_gravity="right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/ic_collections"
            android:src="@drawable/colorfanmas" 
            android:onClick="irMisPaletasNoDone"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearDone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/contPaletas"
        android:layout_below="@+id/contPaletas"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:baselineAligned="false"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/color1"
            android:layout_width="@dimen/caja_colores"
            android:layout_height="@dimen/caja_colores"
            android:layout_margin="3dp"
            android:background="#FFFFFF"
            android:clickable="true"
            android:onClick="setCajaColor"
            android:orientation="horizontal" >
        </LinearLayout>

        <LinearLayout
            android:id="@+id/color2"
            android:layout_width="@dimen/caja_colores"
            android:layout_height="@dimen/caja_colores"
            android:layout_margin="3dp"
            android:background="#FFFFFF"
            android:clickable="true"
            android:onClick="setCajaColor"
            android:orientation="horizontal" >
        </LinearLayout>

        <LinearLayout
            android:id="@+id/color3"
            android:layout_width="@dimen/caja_colores"
            android:layout_height="@dimen/caja_colores"
            android:layout_margin="3dp"
            android:background="#FFFFFF"
            android:clickable="true"
            android:onClick="setCajaColor"
            android:orientation="horizontal" >
        </LinearLayout>

        <LinearLayout
            android:id="@+id/color4"
            android:layout_width="@dimen/caja_colores"
            android:layout_height="@dimen/caja_colores"
            android:layout_margin="3dp"
            android:background="#FFFFFF"
            android:clickable="true"
            android:onClick="setCajaColor"
            android:orientation="horizontal" >
        </LinearLayout>

        <LinearLayout
            android:id="@+id/color5"
            android:layout_width="@dimen/caja_colores"
            android:layout_height="@dimen/caja_colores"
            android:layout_margin="3dp"
            android:background="#FFFFFF"
            android:clickable="true"
            android:onClick="setCajaColor"
            android:orientation="horizontal" >
        </LinearLayout>

        <TextView
            android:id="@+id/txtdone"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:clickable="true"
            android:gravity="center"
            android:onClick="irMisPaletas"
            android:text="@string/done"
            android:textSize="@dimen/font_size_done"
            android:textColor="@color/blanco" />
    </LinearLayout>

    <GridView
        android:id="@+id/grillaColores"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/menuNavegacion"
        android:layout_below="@+id/linearDone"
        android:layout_marginLeft="2dp"
        android:numColumns="5"
        android:verticalSpacing="10dp" >
    </GridView>

    <LinearLayout
        android:id="@+id/menuNavegacion"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="5dp"
        android:background="@color/fondo_negro_mp"
        android:gravity="bottom"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="irMenuPrincipal"
            android:contentDescription="@string/ic_collections"
            android:src="@drawable/collections" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/ic_collections"
            android:src="@drawable/colorfanclick" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="irMisColecciones"
            android:contentDescription="@string/ic_collections"
            android:src="@drawable/myselection" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="mostrarContacto"
            android:contentDescription="@string/ic_collections"
            android:src="@drawable/contact" />
    </LinearLayout>

</RelativeLayout>